[gd_scene load_steps=13 format=1]

[ext_resource path="res://res/styles/border_red.tres" type="StyleBox" id=1]
[ext_resource path="res://res/styles/border_green.tres" type="StyleBox" id=2]
[ext_resource path="res://res/styles/border_blue.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/Pixelig Cursief.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Title/Title.gd" type="Script" id=5]
[ext_resource path="res://assets/graphics/Title/title_splash.png" type="Texture" id=6]
[ext_resource path="res://scenes/Title/Env.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=3]

font/size = 10
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = ExtResource( 1 )
Button/styles/normal = ExtResource( 2 )
Button/styles/pressed = ExtResource( 3 )

[sub_resource type="Environment" id=5]

ambient_light/enabled = false
ambient_light/color = Color( 0, 0, 0, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 5
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 2
glow/blur_scale = 3.0
glow/blur_strength = 1.0
glow/blur_blend_mode = 0
glow/bloom = 1.0
glow/bloom_treshold = 0.42
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.5
hdr/white = 1.0
hdr/glow_treshold = 0.6
hdr/glow_scale = 1.0
hdr/min_luminance = 0.2
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = true
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[node name="Title" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 5 )

[node name="Graphic" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 16.0
margin/right = 416.0
margin/bottom = 160.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 0

[node name="MadeBy" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 208.0
margin/right = 480.0
margin/bottom = 224.0
text = "2017 BATHWATER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MadeWith" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 224.0
margin/right = 480.0
margin/bottom = 240.0
text = "made with GODOT ENGINE 2.1.4"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Version" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 480.0
margin/top = 0.0
margin/right = 16.0
margin/bottom = 16.0
custom_colors/font_color = Color( 0.488281, 0.488281, 0.488281, 1 )
text = "vM.m.b"
align = 2
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Actions" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 176.0
margin/right = 400.0
margin/bottom = 192.0
alignment = 1

[node name="START" type="Button" parent="Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 9.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 18.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "NEW GAME"
flat = true

[node name="CONTINUE" type="Button" parent="Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 91.0
margin/top = 0.0
margin/right = 147.0
margin/bottom = 18.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "CONTINUE"
flat = true

[node name="OPTIONS" type="Button" parent="Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 175.0
margin/top = 0.0
margin/right = 226.0
margin/bottom = 18.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "OPTIONS"
flat = true

[node name="QUIT" type="Button" parent="Actions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 266.0
margin/top = 0.0
margin/right = 296.0
margin/bottom = 18.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = true

[node name="Env" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 5 )
script/script = ExtResource( 7 )

[connection signal="pressed" from="Actions/START" to="." method="_on_START_pressed" flags=6]

[connection signal="pressed" from="Actions/CONTINUE" to="." method="_on_CONTINUE_pressed"]

[connection signal="pressed" from="Actions/OPTIONS" to="." method="_on_OPTIONS_pressed"]

[connection signal="pressed" from="Actions/QUIT" to="." method="_on_QUIT_pressed"]


